--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
     "@types/lodash": "^4.14.171",
     "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.9",
+    "@types/react-router-dom": "^5.1.8",
     "antd": "^4.16.7",
     "axios": "^0.21.1",
     "cra-template-typescript": "1.1.2",
+    "dayjs": "^1.10.6",
     "lodash": "^4.17.21",
     "mobx": "^6.3.2",
+    "mobx-react": "^7.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.3.5",
     "web-vitals": "^2.1.0"
@@ -40,5 +44,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "less": "^4.1.1",
+    "less-loader": "^10.0.1"
   }
 }
